@@ -1,6 +1,6 @@
 displayName = Verdant
 author = GabeHasWon
-version = 1.2.2.2
+version = 1.2.3
 dllReferences = StructureHelper, NetEasy_v0.1.8, NetSerializer
 hideCode = false
 hideResources = false
